--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.scss
@@ -1,39 +1,7 @@
-@import '../../../../../../../assets/styles/mixins.scss';
-@import '../../../../../../../assets/styles/mat-mixins';
-
-@include mat-form-field-background-white;
-
-div.spinner {
-	@include centered-spinner;
-}
-
-::ng-deep .mat-list .mat-list-item .mat-line{
-    Word-wrap: break-Word;
-    white-space: pre-wrap;
-}
-
-::ng-deep  .mat-list .mat-list-item{
-	height:initial!important;
-}
-
-.mat-list-item:hover {
-    background-color: #f3efef8e;
-    cursor: pointer;
-}
-
 .filter-panel{
     min-width: 30%;
     background-color: #f3efef8e;
     padding: 20px;
-}
-
-.mat-card {
-    padding: 0px;
-}
-
-.mat-list-item {
-	padding-bottom: 5px;
-	padding-top: 5px;
 }
 
 section.problems {
@@ -41,7 +9,36 @@ section.problems {
     margin-top: 0;
 	max-height: 80vh;
 	overflow-y: auto;
-	word-break: break-word;
+	overflow-wrap: break-word;
+}
+.no-data-styles {
+    padding: 20px 5px;
+    text-align: center;
+    font-weight: bold;
+    color: #A8A8A8;
+    font-size: 18px
+}
+#problemas {
+    .mat-list .mat-list-item .mat-line{
+        overflow-wrap: break-word;
+        white-space: pre-line;
+    }
+
+    .mat-list .mat-list-item{
+        height:initial;
+        padding:5px 0;
+    }
+
+    .mat-list-item:hover {
+        background-color: #f3efef8e;
+        cursor: pointer;
+    }
+
+    .mat-list-item {
+        padding-bottom: 5px;
+        padding-top: 5px;
+        font-size: 14px;
+    }
 }
 
 .problem {
@@ -49,12 +46,7 @@ section.problems {
 }
 
 #historical-problems-card {
-    min-width: 60%;
-    width: 100%;
-}
-
-h3 {
-    margin: 0px;
+    padding: 0;
 }
 
 .problems-table-header-text {
@@ -67,8 +59,27 @@ h3 {
 	pointer-events:none;
 }
 
-.solved-problems-row {
-	padding-bottom: 15px;
-	padding-top: 15px;
+#solved_problems .date {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
+#historical-problems {
+    margin-top: 60px;
+    .tab-label {
+        font-size: 18px;
+        font-weight: 500;
+    }
+    .mat-tab-label-active {
+        opacity: 1;
+    }
+    .mat-form-field-outline {
+        background-color: #ffffff;
+    }
+    h3 {
+        margin: 0px;
+    }
+}
+
 
