tg-4622 [FE] Agregar conexión con BE para completar la consulta odontológica

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -377,4 +377,12 @@
 
 	</div>
 
+	<div actions id="buttons">
+		<div align="end">
+			<button class="uppercase" mat-raised-button color="primary" (click)="save()">
+				<span [translate]="'buttons.CONFIRM'"></span>
+			</button>
+		</div>
+	</div>
+
 </app-dock-popup>
