tg-4807 [FE] Se agrega la lógica de que no se pueda eliminar un procedimiento anterior al ya saleccionado

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
@@ -45,6 +45,7 @@
 				[placeholder]="'Seleccione 1er procedimiento'"
 				[options]="filteredProceduresTypeahead"
 				[externalSetValue]="initValueTypeaheadPieceFirstProcedure"
+				[disabledClearButton]="disabledFirstProcedureButton"
 				(selectionChange)="firstProcedureChanged($event)"
 			>
 			</app-typeahead>
@@ -53,6 +54,7 @@
 				[placeholder]="'Seleccione 2do procedimiento'"
 				[externalSetValue]="initValueTypeaheadProcedureTwo"
 				[options]="filteredProceduresTypeahead"
+				[disabledClearButton]="disabledSecondProcedureButton"
 				(selectionChange)="secondProcedureChanged($event)"
 			>
 			</app-typeahead>
