--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -63,6 +63,53 @@
 			</app-new-document-section>
 		</div>
 
+		<div id="other_procedures">
+			<app-new-document-section sectionTitle="Otros procedimientos">
+				<ng-container concept-form>
+					<app-concepts-search *ngIf="!otherProceduresService.getSnomedConcept() else otherProceduresForm"
+						[label]="'Procedimiento'" (search)="otherProceduresService.openSearchDialog($event)">
+					</app-concepts-search>
+
+					<ng-template #otherProceduresForm>
+						<form [formGroup]="otherProceduresService.getForm()"
+							(ngSubmit)="otherProceduresService.addToList()">
+							<mat-form-field appearance="outline">
+								<mat-label> Tipo de procedimiento </mat-label>
+								<input id="input_procedure" matInput type="text" formControlName="snomed"
+									name="snomed" readonly
+									matTooltip="{{otherProceduresService.getSnomedConcept().pt }}">
+								<button id="clear_procedure" mat-button matSuffix color="warn" mat-icon-button
+									(click)="otherProceduresService.resetForm()">
+									<mat-icon>close</mat-icon>
+								</button>
+							</mat-form-field>
+
+							<mat-form-field appearance="outline">
+								<mat-label> Fecha </mat-label>
+								<input matInput id="date_procedure" [matDatepicker]="datePicker"
+									formControlName="performedDate" [max]="otherProceduresService.getFechaMax()">
+								<mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+								<mat-datepicker #datePicker></mat-datepicker>
+							</mat-form-field>
+
+							<div align="end">
+								<button id="submit_procedure" class="uppercase" mat-raised-button color="primary"
+									type="submit">
+									<span> Agregar procedimiento </span>
+								</button>
+							</div>
+
+						</form>
+					</ng-template>
+				</ng-container>
+				<app-document-section-table data-display tableTitle="Procedimientos registrados"
+					[columns]="otherProceduresService.getTableColumnConfig()"
+					[data]="otherProceduresService.getProcedimientos()">
+				</app-document-section-table>
+
+			</app-new-document-section>
+		</div>
+
 		<div id="other-diagnostics">
 			<app-new-document-section sectionTitle="Otros diagnósticos">
 				<ng-container concept-form>
